language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_inner_let_assert_to_case.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let assert [wibble] = {\n        let assert Ok(wobble) = {\n            Ok(1)\n        }\n        [wobble]\n    }\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert [wibble] = {
        let assert Ok(wobble) = {
                          ↑      
            Ok(1)
        }
        [wobble]
    }
}


----- AFTER ACTION
pub fn main() {
    let assert [wibble] = {
        let wobble = case {
            Ok(1)
        } {
          Ok(wobble) -> wobble
          _ -> panic
        }
        [wobble]
    }
}
