language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_int_binary_to_hexadecimal.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() { 0b1101111 }"
---
----- BEFORE ACTION
pub fn main() { 0b1101111 }
                ↑          


----- AFTER ACTION
pub fn main() { 0x6f }
